<resources>
  <string name="app_name">Muzei Earth View</string>

  <string name="source_name">Earth View</string>
  <string name="source_description">Earth View from Google Earth everyday.</string>
  <string name="error_no_image_to_share">No image to share.</string>
  <string name="error_no_image_to_download">No image to download.</string>

  <string name="action_share_artwork">Share artwork</string>
  <string name="artwork_share_text">My #Android wallpaper today is %1$s. #MuzeiEarthView\n\n%2$s</string>
  <string name="action_download">Download Wallpaper</string>
  <string name="action_view_in_google_maps">View in Google Maps</string>

  <string name="settings_label">Earth View Settings</string>

  <string name="pref_key_category_general">pref_category_general</string>
  <string name="pref_title_general">General</string>

  <string name="action_rotate_interval">Change interval</string>
  <string name="action_rotate_interval_none">Don\'t change wallpaper</string>
  <string name="action_rotate_interval_1h">Every hour</string>
  <string name="action_rotate_interval_3h">Every 3 hours</string>
  <string name="action_rotate_interval_6h">Every 6 hours</string>
  <string name="action_rotate_interval_24h">Every 24 hours</string>
  <string name="action_rotate_interval_72h">Every 3 days</string>
  <string name="done">Done</string>

  <string name="pref_key_rotate_interval">rotate_interval</string>
  <string name="pref_key_launcher_intent">pref_launcher_intent</string>
  <string name="pref_title_launcher_intent">Hide App Icon</string>
  <string name="pref_summary_launcher_intent_on">App icon is hidden.</string>
  <string name="pref_summary_launcher_intent_off">App icon is visible on homescreen.</string>

  <string name="pref_key_wifi_only">pref_wifi_only</string>
  <string name="pref_title_wifi_only">Wi-Fi Only</string>
  <string name="pref_summary_wifi_only_on">Download images over Wi-Fi only</string>
  <string name="pref_summary_wifi_only_off">Download images over Wi-Fi or use cellular network</string>

  <string name="pref_key_category_integrations">pref_category_integrations</string>
  <string name="pref_title_integrations">Integrations</string>

  <string name="pref_key_muzei_integration">pref_muzei_integration</string>
  <string name="pref_title_muzei_integration">Muzei App Integration</string>
  <string name="pref_summary_muzei_installed">Open Muzei settings to select “Earth View” as your source.</string>
  <string name="pref_summary_muzei_not_installed">Click here to install Muzei Wallpaper for this app to set your wallpaper.</string>

  <string name="permission_storage_rationale">External Storage permission is required to show the downloaded wallpapers.</string>
  <string name="permission_available_storage">Storage Permissions have been granted. Wallpapers can be used now.</string>
  <string name="permission_storage_title">Storage Permission</string>

  <string-array name="action_rotate_interval_choices" translatable="false">
    <item>@string/action_rotate_interval_none</item>
    <item>@string/action_rotate_interval_1h</item>
    <item>@string/action_rotate_interval_3h</item>
    <item>@string/action_rotate_interval_6h</item>
    <item>@string/action_rotate_interval_24h</item>
    <item>@string/action_rotate_interval_72h</item>
  </string-array>

  <string-array name="action_rotate_interval_values" translatable="false">
    <item>0</item>
    <item>1</item>
    <item>3</item>
    <item>6</item>
    <item>24</item>
    <item>72</item>
  </string-array>

  <string name="error_install_muzei">Please install Muzei App first!</string>
</resources>
